--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,12 @@
 * {
-    margin:0;
-    padding:0;
+    margin:0 auto;
+    padding:0; 
+    max-width: 100vw;    
 
+}
+body{
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 header {
     background-color: #E0F2F0;
@@ -10,11 +15,10 @@ header {
     justify-content:space-between;
     align-items: center;
     padding: 1% 10%;
-    
-    position: absolute;
     height: 101px;
     left: 0px;
     top: 0px;
+
 }
 
 header img {
@@ -45,7 +49,8 @@ ul a {
 
 
 main {
-    padding: 8%;
+    margin: 0 8%;
+    
 }
 
 h2 {
@@ -116,7 +121,7 @@ h2 {
     height: 30px;
     left: 160px;
     top: 0px;
-    padding-bottom: 120px;
+    padding-bottom: 160px;
 
     font-family: 'Poppins', sans-serif;
     font-style: normal;
@@ -144,4 +149,80 @@ h2 {
     color: #E86B2B;
     text-decoration-line: underline;
 
+}
+
+footer {
+    display:flex;
+    flex-direction: column;
+    position: static;
+
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    
+    font-size: 16px;
+    line-height: 24px;
+    font-feature-settings: 'pnum' on, 'lnum' on;
+    color: #FFFFFF;
+
+}
+#redes-sociais {
+
+    /* Auto Layout */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    
+    background: #48AA96;
+    position: static;
+    margin: 0;
+    /* align-items: flex-start; */
+    padding: 48px 160px;
+    height: 146px;
+    width: 100vw;
+    left: 0px;
+    top: 0px;
+
+    font-weight: bold;
+    letter-spacing: 0.2px;
+    
+   
+}
+
+#logos {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    padding: 0;   
+    
+}
+
+#logos a{
+    margin:0 20px;
+}
+
+
+
+
+#ecopatas-info {
+    background: #007A68;
+    position: static;
+    height: 216px;
+    width: 100vw;
+    padding: 24px 160px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    line-height: 150%;
+}
+
+
+address {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 1px;
+    
 }
