--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,5 +1,6 @@
 #main-home {
     margin: 0;
+    
 }
 
 #section-um {
@@ -234,13 +235,14 @@ i {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 120px 160px;
+    padding: 120px 50px;
 
-    position: static;
+   
+    /* position: static;
     width: 1441px;
     height: 1369px;
     left: 0px;
-    top: 3059px;
+    top: 3059px; */
 
     /* branco */
 
@@ -294,12 +296,8 @@ i {
     color: #474747;
 }
 
-#section-cinco h5 {
-
-}
-
 #lista {
-    padding-left: 80px;
+    padding-left: 70px;
     padding-bottom: 50px;
 
 }
@@ -335,11 +333,18 @@ i {
 }
 
 #section-seis {
+    /* Auto Layout */
+
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     padding: 120px 160px;
 
+    position: static;
+    width: 1441px;
+    height: 1172px;
+    left: 0px;
+    top: 4428px;
 
     /* Verde Primária - Variações/verde.50 */
 
