--- a/src/css/volunteer.css
+++ b/src/css/volunteer.css
@@ -114,6 +114,7 @@
     align-self: stretch;
     flex-grow: 0;
     padding-right: 10px;
+    
 }
 
 #section-2 a {
@@ -158,6 +159,11 @@ button {
     order: 0;
     flex-grow: 0;
     margin: 0px 24px;
-    border: 1px solid #007A68;
+    border: 0px solid #007A68;
+}
+
+a:hover {
+    text-decoration: none;
+
 }
 
