--- a/src/css/home.css
+++ b/src/css/home.css
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 10% 10%;
+    padding: 5% 10%;
     width: 100vw;
     
 
@@ -19,7 +19,8 @@
 
 #section-um-infos {
     padding-right: 10%;
-    /* height: 464px; */
+    padding-top: 5%;
+    
 
 }
 
@@ -28,7 +29,8 @@
     font-size: 50px;
     line-height: 120%;
     font-weight: 700;
-    margin: 10px 0;
+    margin: 0px 0;
+    height: 125px;
 
     letter-spacing: 1px;
     font-feature-settings: 'pnum' on, 'lnum' on;
@@ -43,6 +45,8 @@
     letter-spacing: 0.2px;
     font-feature-settings: 'pnum' on, 'lnum' on;
     color: #E86B2B;
+    padding: 10px 0;
+
 }
 
 #section-um-infos button {
@@ -72,7 +76,7 @@
     order: 2;
     align-self: stretch;
     flex-grow: 0;
-    margin: 24px 0px;
+    margin: 0px 0px;
 
     font-weight: bold;
     font-size: 18px;
@@ -87,27 +91,16 @@
     color: #FFFFFF;
 }
 
-#section-um-infos img{
-    /* width: 1000px;
-    height: 70vh;
-    position: static; */
-    width: 545px;
-    height: 464px;
-    /* left: 576px;
-    top: 0px; */
-
-    /* border-radius: 8px; */
-
-    /* Inside Auto Layout */
-
-
+#section-um-img img{
+    width: 510px;
+    padding-right: 20px;
 }
 #section-um-final {
     padding-top: 50px;
 }
 
 #section-um-final img {
-    width: 70%;
+    width: 147px;
 }
 #section-um-final p {
     padding-top: 20px;
