--- a/src/css/home.css
+++ b/src/css/home.css
@@ -150,26 +150,43 @@
 
 }
 
-.btn-green {
+.div-button {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    padding: 16px 0 16px 100px ;
-    margin-left: 25%;
-   
-    
-    position: static;
-    width: 545px;
+    /* padding: 16px 36px; */
+    width:545px;
     height: 56px;
-    left: 288px;
-    top: 0px;
+    margin: 0 25%;
+    
 
-    /* position: static;
-    width: 316px;
-    height: 24px;
-    left: 91.45px;
-    top: 16px; */
+    /* Base Primária/verde.700 */
+
+    background: #007A68;
+    border-radius: 8px;
+
+    /* Inside Auto Layout */
+
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    /* text-align: center; */
+    
+
+}
+
+.div-button a:hover {
+    text-decoration: none;
+     
+}
+.div-button:hover, .btn-green:hover {
+    background-color: #E86B2B;
+    
+}
+
+.btn-green {
+    text-align: center;
     font-weight: bold;
     font-size: 20px;
     line-height: 24px;
@@ -178,22 +195,20 @@
     display: flex;
     align-items: center;
     letter-spacing: 0.16px;
-    font-feature-settings: 'pnum' on, 'lnum' on;
-
-    /* branco */
-
     color: #FFFFFF;
+    background-color: transparent;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin:  0px;
+    border: 0px solid #007A68;
     
-    /* Base Primária/verde.700 */
-    
-    background: #007A68;
-    border-radius: 8px;
-    
-    /* Inside Auto Layout */
 
 }
+
 i {
-    text-align: center;
+    padding-left: 15px;
+   
 }
 
 
