--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,7 +8,7 @@ body{
     overflow-x: hidden;
     overflow-y: scroll;
 }
-header {
+/* header {
     background-color: #E0F2F0;
     display: flex;
     flex-direction: row;
@@ -46,7 +46,7 @@ header nav {
 
 ul a {
     text-decoration: none;
-}
+} */
 
 
 main {
