--- a/src/css/points.css
+++ b/src/css/points.css
@@ -268,6 +268,17 @@
     align-items: center;
     padding: 16px 36px;
 }
+button a{
+    color: #FFFFFF;
+}
+button a:hover {
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+#section-2 button:hover {
+    background-color:#E86B2B;
+}
 
 
 
