--- a/src/css/volunteer.css
+++ b/src/css/volunteer.css
@@ -99,7 +99,7 @@
     padding: 0px; */
 
     font-weight: normal;
-    font-size: 17px;
+    font-size: 16px;
     line-height: 150%;
     /* or 30px */
 
@@ -117,8 +117,9 @@
     
 }
 
-#section-2 a {
+#checkbox a {
     color:#E86B2B;
+    text-decoration: underline;
     
 }
 
@@ -161,9 +162,11 @@ button {
     margin: 0px 24px;
     border: 0px solid #007A68;
 }
-
-a:hover {
-    text-decoration: none;
+button a {
+    color: #FFFFFF;
 
 }
 
+a:hover {
+    text-decoration: none;
+}
