Novos ajustes btn pagina home e voluntariado

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -91,7 +91,7 @@
     color: #FFFFFF;
 }
 #section-um-infos button:hover, #section-um-infos a:hover {
-    background-color: #007A68;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
     text-decoration: none;
 }
 
@@ -185,7 +185,7 @@
      
 }
 .div-button:hover, .btn-green:hover {
-    background-color: #E86B2B;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
     
 }
 
@@ -208,6 +208,12 @@
     border: 0px solid #007A68;
     
 
+}
+.btn-green a{
+    color:#FFFFFF;
+}
+.btn-green a:visited {
+    color:#FFFFFF;
 }
 
 i {
