--- a/src/css/volunteer.css
+++ b/src/css/volunteer.css
@@ -167,6 +167,40 @@ button a {
 
 }
 
-a:hover {
+button a:hover {
     text-decoration: none;
+    color: #FFFFFF;
+    
 }
+.div-button:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    
+}
+
+#div-subscribe {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 16px 36px;
+    background: #007A68;
+    border-radius: 8px;
+    flex: none;
+    order: 1;
+    align-self: stretch;
+    flex-grow: 0;
+    margin: 60px 0px;
+
+}
+
+#link-subscribe:hover {
+    text-decoration: none;
+ 
+
+}
+#link-subscribe:active {
+    text-decoration: none;
+    border:0 none #007A68;
+
+}
+
