--- a/src/css/header.css
+++ b/src/css/header.css
@@ -20,8 +20,9 @@ header img {
 header nav {
     position: static;
     height: 30px;
-    left: 5px;
+    left: 0px;
     top: 0px;
+    width:100%;
 
     font-family: 'Poppins', sans-serif;
     font-style: normal;
@@ -41,7 +42,7 @@ a {
     flex: none;
     order: 1;
     flex-grow: 0;
-    margin: 0px 5px;
+    margin: 0px 0px;
 }
 
 a:hover {
