--- a/src/css/volunteer.css
+++ b/src/css/volunteer.css
@@ -25,10 +25,11 @@
 
 #section-1 img {
     position: static;
-    width: 1050px;
-    height: 522px;
+    width: 100%;
+    height: 100%;
     left: 160px;
     top: 236px;
+
 
     
     border-radius: 8px;
