--- a/src/css/home.css
+++ b/src/css/home.css
@@ -270,7 +270,7 @@ i {
 #dados-flourish {
     display: flex;
     flex-direction: row;
-    /* justify-content: space-between; */
+    justify-content: space-between;
     align-items: center;
     padding: 0px;
 
@@ -286,13 +286,22 @@ i {
     flex-grow: 0;
     margin: 68px 0px;
 
+
+    font: 800 40px system-ui;
+
 }
+
+/* counter dados flourish */
+
+
+
+
 .dados {
     display: flex;
     flex-direction: column;
     align-items: center;
     
-    padding: 16px;
+    padding: 0px;
 
     flex: none;
     order: 0;
@@ -311,6 +320,7 @@ i {
     font-size: 16px;
     line-height: 24px;
     width:230px;
+    margin: 0px;
     /* or 150% */
 
     text-align: center;
@@ -319,21 +329,13 @@ i {
     justify-content:center; */
 }
 
-#outros-animais {
+#outros-animals {
     margin: 0px;
-}
-
-#all, #dogs, #cats, #other {
-    width: 100px;
-    height: 184px;
-
 }
 
 #section-quatro {
     background: #E0F2F0;
     padding: 120px 120px;
-    
-
 }
 
 #section-quatro p {
